# dev-path

./: .alias  README.md  README.rst  SYMLINKS  pyproject.toml  s  setup.py
dev_path/: __init__.py  __main__.py  app.py  core.py  p.py  xclass.py
dev_path/shell/: dev-function.sh
example/: add-to-bashrc.sh  dot-dev-paths
ref/: bash-interactive.aliases.fn.dev.sh  usage.txt
scripts/: test-dev-function.sh  test-dev-path
scripts/actual/: test-dev-path.py
t/: p.py  scenarios.py
tests/: chdir.py  test_import.py  test_scenarios.py.skip
